--- a/static/css/table.css
+++ b/static/css/table.css
@@ -1,7 +1,6 @@
 table {
     width: 100%;
     border-collapse: collapse;
-    table-layout: fixed;
 }
 tr:hover {
     background-color: var(--light-aristotle-blue);
